--- a/LaTeX/Undervejs/solutiononthemarked.tex
+++ b/LaTeX/Undervejs/solutiononthemarked.tex
@@ -1,13 +1,27 @@
 \section{Solutions on the market}
+\label{sec:Solution}
+This chapter are used to research the marked and thereby get a image of what solutions there already exits on the marked. Through the research it is also possible to determine, how the exiting solution helps the user with the stated problem. By looking at existing solutions it can used to determine what features that would needed in an more problem oriented solution.
 
-The amount of lists and guides on the market is huge. These lists and guides offers help and provide tips for packing for travelling. Some of these lists and guides have been developed into apps(application) that are available for the customer to use.
+The amount of lists and guides on the market is huge. These lists and guides offers help and provide tips for packing for travelling. Some of these lists and guides have been developed into applications that are available for the customer to use.
+
+An application or in short app, is a program that fulfil different kind of services for the user. Apps are used in the web browser, computer, smart phone, and tablets. The term app is general mentioned in context to smart phones and tablets.
+
 There also exists programs, that have integrated algorithms to handle optimization of the packing, on the marked that can be used.
 First a look into these lists and guides and the more advance solution thereafter.
 
 \subsection*{App - Packing Pro}
 
-Packing pro is an app that offers templates for check lists to the customer. These templates are designed to different purposes regarding the customer, gender, type of trip, and purpose of the trip.
-The customer can then load the wanted template for the purpose. Packing Pro does nothing else than offer a management tool that helps the customer get an overview of all the things to remember. Packing pro is an app for the smart phone and thereby does not need a running computer to use. As the name implies(pro) the app have to be bought before it can be used \citep{packingpro}.
+Packing pro is an app developed for the Iphone and Ipad that offers templates for check lists to the customer. Iphone is a smart phone and the brand is owned by Apple. Packing Pro uses a touch interface which means that the user by using the finger can navigate around. This is possible because Iphone and Ipad support touch navigation.
+
+Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. There is also a menu in where the user can charge color theme of the app.
+
+These templates are designed to different purposes regarding the customer, gender, type of trip, and purpose of the trip.
+The customer can then load the wanted template for the purpose. The user also have the possibility to create their own lists by adding things that should be remembered for the trip by them self. The user also have possibility to select an existing list and delete the objects that were found irrelevant by the user. The user can then check object on the lists off as it get packed.
+
+Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used \citep{packingpro}.
+
+Packing Pro works as check list and help the user remember what to pack, but it does not preform any organization of luggages content itself. So Packing Pro itself does not solve the described problem but helps the user remembering what to pack. So a feature to use from this program is the check list function that gives the user an overview of to pack.
+A function that would be needed is the complility with Iphone/Ipad operating system. But it would be nice if the program made to work cross platforms but it is still not required.
 
 \subsection*{App - Checkmark Packlist}
 
