--- a/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
+++ b/trunk/LaTeX/Undervejs/problem afsnit af aleksander.tex
@@ -1,33 +1,38 @@
 \section{Problem}
 In the modern society, families or groups of friends tend to take on vacation to other countries to relax and enjoy their vacation or explore the world \citep{danskecharter}.
-With vacation trips comes packing luggage which plays a role regarding the journey. The size and weight of the luggage can be determined by the time of the stay, the purpose of the trip, and the number of people.
-Time of stay means that the traveller will have to bring more cloth or instead be willing to wash his/hers cloth on the trip.
-The amount of stuff to bring can also depend on what kind of trip and what its purpose is. For example if the purpose of the trip is a sports competition, there are a possibility that there are equipment.
-The number of person on the trip means that all most have a reasonable amount of cloth or other items that will be needed on the trip and thereby increases the amount of luggage.
 
-When travelling with many and/or heavy bags it can be frustrating to carry the luggage too far and it can be hard to manoeuvre with large luggage if the room is permeated or narrow. Also if its travel by plane, too large or too heavy luggage can trigger a fee. The size of the fee is informed on the airlines website and varies from airline to airline \citep{altombag}.
+When going on a vacation or a business trip packing a suitcase is normally needed. You need all you personal items and you cloth with you. The length of the stay, the purpose of the trip, and the number of people travelling together effects the weight and size of the luggage. This can be a problem due to the different rules or limits to you luggage when using different means of transformation.
 
-Therefore it can be an advantage to pack the bags properly and limit the choice of things to take on the journey.
+The time spend away affects how much cloth the traveller will need to bring and/or if the traveller will need to wash the cloth while away. A longer stay means of cause that the traveller will need more cloth. This affects the size and weight of the luggage because you will need more or less items with you on different trips.
+ 
+The amount of items to bring also depend on what kind of trip it is and that the purpose is with the trip. For example if the purpose of the trip is a sport competition, you might need to bring some equipment, you would not normally bring on for example a holiday trip. If it is a short business trip all you might need could be a briefcase with your papers and a suit to wear.
 
-People who are travelling with airlines and have over 23 kg in one bag will experience that they will get charged with an extra fee. This fee has been introduced so the airlines bag handlers do not have to take the risk of getting injuries by carrying too heavy luggage.
+The number of people on the trip means more luggage because everyone needs their own personal items, and their own cloth. This can be a problem if the persons have a lot of shared items that has to be spread in different suitcases and need to be found afterwards and the it might also effect the total weight of the luggage.
+
+It can be frustrating, when travelling with many and/or heavy suitcases, if you need to carry the luggage far. It can also be hard to manoeuvre if the room is small or narrow or is simply filled with a lot of people constantly blocking your way.
+ 
+There can also be a problem with to large or heavy suitcases if you are travelling by plane since this makes you a fee. The size of the fee is found on the airlines website and varies from airline to airline \citep{altombag}. The fee has been introduced so the airline bag-handlers do not risk getting injuries by carrying to many, heavy suitcases. 
+To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items to bring so the total weight does not extend the allowed weight.
+
 
 \subsection*{Packing}
 
-Because of the weight and size restrictions it can be difficult to pack all the cloth and accessories that is necessary to have for the trip in a limited amount of bags and it can be necessary to acquire more bags for the trip or pick less items to pack for the vacation. More luggage means a bigger cost for the flight to the desired destination. A way to avoid buying and paying for extra bags for the vacation is to pack bags more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around if not done correctly. 
+Because of the weight and size restrictions it can sometimes be difficult to get all the items you want to to bring into a small enough suitcase and not extending the allowed weight. It can sometimes to necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
+Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around if not done correctly. 
 
 The increased weight means the bags might exceed the limit for weight and therefore trigger a fee for overweight luggage.
-It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation or might not have packed their luggage optimal \citep{airstat}.
+It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
 
-\citep{airstat} shows the amount of fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see that there are people that exceeds the set of limits given by the airline. A note regarding this source is that the fee amount is a combination of the different rules and related fees. Therefore the statistics do not give an accurate image of weight limit but more an image of the problem in general with luggage exceeding the given limits.
+\citep{airstat} shows the amount of fees given in context to luggage that have been registered at the U.S. airlines. Through these statistics it is possible to see, \textbf{there are people that exceeds the set of limits given by the airline.} A note regarding this source is that the size of the fee is a combination of the different rules and related fees. Therefore the statistics do not give an accurate image of the problem with weight limit, but a more general image of the problems with luggage exceeding the given limits.
 
-The problem with packing luggage is tied to most kind of transportation be it train, car, or flights. But flights is the one transport where it plays the biggest role for the consumer because it have economical consequences. With train and car the consumer is the only one to define how heavy luggage may be but there is restriction to how big the bags are allowed to be. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines the size for how big the bags can be to be safe.
+The problem with packing luggage is mostly the same if it is by train, car, or flights. But flights is the one transport where it plays the biggest role for the traveller because it have economical consequences. With train and car the traveller is the only one to define how heavy luggage are allowed to be but there is restriction to how big the bags are allowed to be in the train. For train it is 100 x 60 x 30 cm \citep{rulestrain}, for cars it is the size of the car and number of passages that defines how big the suitcases can be for the journey to be safe.
 
-Going on vacation using the car as transportation, depending on how much luggage have been brought along the limitation will then come down to the size of the car. When packing a car it is important to place the heaviest of the luggage just behind the back seats and evenly spread to the sides. This is to prevent the luggage from gathering momentum during an emergency brake and maybe go through the back seats. Furthermore it is to prevent over steering should the luggage be too far in the back. It is also crucial to fasten all loose objects like water bottles and the like, because in the event of a crash these items can become projectiles and deal some serious damage\citep{Farlig_bagage}.
+When going on vacation, and using the car as transportation, the size of the car sets the limit in size of the luggage, since you cannot just pay to get more luggage with you than fits into your car. When packing a car it is important to place the heaviest of the luggage just behind the back seats and evenly spread to the sides. This is to prevent the luggage from gathering momentum during an emergency brake and maybe go through the back seats. Furthermore it is to prevent over steering should the luggage be too far in the back. It is also crucial to fasten all loose objects like water bottles and the like, because in the event of a crash these items can become projectiles and deal some serious damage\citep{Farlig_bagage}.
 
-On a vacation there can be many good experiences and memories. A memory tends to be bound to photos, items and souvenirs and thereby makes it easier to remember. Photos and souvenirs also have a certain value and can be used to fill the home with memories about the past experiences.
-With this in the mind, it is important to make room for possible souvenirs or other things that that simply had to be bought.
+On a vacation there can be many good experiences and memories. The memories tends to be bound to photos, items and souvenirs and thereby makes it easier to remember. Photos and souvenirs also have a certain value and can be used to fill the home with memories about the past experiences.
+With this in the mind, it is important to make room for possible souvenirs or other things that that simply had to be bought while away.
 
-As it earlier have been mentioned the weight and size of the luggage were a problem before the takeoff, therefore it must mean that it also will be a problem on the trip home.
-This means that if a family packs just to the limits and then buy things and souvenirs on their vacation they will get into trouble at the airport.
+As earlier mentioned the weight and size of the luggage is a problem before the departure, therefore it will normally also be a problem on the trip home.
+This means that if a family packs just to the limits and then buy things and souvenirs on their vacation they will get into trouble when packing the luggage for the trip home.
 
-So the general problem is the packing of the bags in the most optimal way and spread the weight in the available bags. It can also be difficult when packing the bag to make some space for possible souvenirs or other goods.
+So the general problem is packing the luggage in the most effective way and spreading the weight in the available suitcases, without violating the different rules or limits to size and weight. It can also be a problem to pack the suitcases to the trip home due to the brought souvenirs or other items.
