--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
+@BOOK{combopt,
+  title = {Combinatorial Optimization - Theory and Algorithms},
+  publisher = {Springer},
+  year = {2002},
+  editor = {Kurt Mattes, Heidelberg},
+  author = {Benhard Korte et. al.},
+  owner = {Lappie},
+  timestamp = {2012.02.29}
+}
+
 @MISC{idianrules,
   author = {Indian railways},
   title = {luggage rules},
