--- a/trunk/LaTeX/Klar til at blive rettet af andre/Specificationrequirement.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Specificationrequirement.tex
@@ -7,7 +7,7 @@ The program has some features, which are essential for the program to work, thes
 These are the features that the program will have. 
 
 \textbf{Guide the user}:
-The program will have a little readme file, or other form of guide, that will tell the customer how to use the program..
+The program will have a little "readme" file, or other form of guide, that will tell the customer how to use the program.
 \newline
 
 \textbf{Distribute weight}:
@@ -23,11 +23,11 @@ If a long trip is planned, the program must be able to account for more souvenir
 \newline
 
 \textbf{On the road}:
-The program will be able to tell you, while you are on the trip, if there is enough space for a souvenirs, if you input the dimensions and weight of that item. 
+The program will be able to tell you, while you are on the trip, if there is enough space for a souvenirs, if you input the dimensions and weight of that item.
 \newline
 
 \textbf{Baggage rules}:
-The program will need to know basic baggage rules. For example the luggage must not weigh too much, and it must be below certain dimensions. 
+The program will need to know basic baggage rules. For example the luggage must not weigh too much, and it must be below certain dimensions.
 \newline
 
 \textbf{Where in the suitcase}:
